# oop-aquarium

./: .gitignore  Animal.py  Aqua.py  Crab.py  Fish.py  Moly.py  Ocypode.py  README.md  Scalar.py  Shrimp.py  main.py  pyproject.toml  requirements.txt
docs/: development.md  user_guide.md
examples/: add_animals_example.py
src/aquarium/: __init__.py  animal.py  aqua.py  config.py  crab.py  fish.py  moly.py  ocypode.py  placement.py  scalar.py  shrimp.py  terminal_io.py  utils.py
tests/: test_animals.py
